--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:  # Allow manual triggering
+  workflow_dispatch:
     inputs:
       branch:
         description: 'Branch to deploy'
@@ -16,25 +16,15 @@ on:
           - main
           - develop
           - staging
-          - feature/branch-name
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    # Ensure package-lock.json exists before Node.js setup
-    - name: Check for package-lock.json
-      run: |
-        if [ ! -f frontend/package-lock.json ]; then
-          echo "Generating package-lock.json for caching..."
-          cd frontend
-          npm install --package-lock-only
-          cd ..
-        fi
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
@@ -58,159 +48,114 @@ jobs:
 
     - name: Install frontend dependencies
       working-directory: ./frontend
-      continue-on-error: false
       run: |
         echo "Installing frontend dependencies..."
-        # Check if package-lock.json exists and is in sync
-        if [ ! -f package-lock.json ]; then
-          echo "No package-lock.json found, generating..."
-          npm install --package-lock-only
-        else
-          echo "Checking if package-lock.json is in sync with package.json..."
-          # If npm ci fails, just regenerate and continue
-          if ! npm ci --dry-run 2>/dev/null; then
-            echo "package-lock.json is out of sync, regenerating..."
-            rm -f package-lock.json
-            npm install --package-lock-only
-          fi
-        fi
-        
-        # Install dependencies - if this fails, try regular npm install as fallback
-        if ! npm ci; then
-          echo "npm ci failed, trying npm install as fallback..."
-          npm install
-        fi
+        npm ci
         echo "Frontend dependencies installed"
 
     - name: Build frontend
       working-directory: ./frontend
-      continue-on-error: false
       run: |
         echo "Building React frontend..."
         npm run build
         echo "Frontend build completed"
-        ls -la build/ || echo "Build directory not found, checking for alternative output"
-        ls -la
+        ls -la build/
 
     - name: Install backend dependencies
       working-directory: ./backend
-      continue-on-error: false
       run: |
         echo "Installing Python dependencies..."
-        pip install --upgrade pip
-        pip install -r requirements.txt || echo "Some packages may have warnings, but continuing..."
+        pip install -r requirements.txt
         echo "Backend dependencies installed"
 
-    - name: Run backend tests (optional)
+    - name: Run backend tests
       working-directory: ./backend/LifeLine
-      continue-on-error: true
       run: |
-        echo "Running Django tests (non-blocking)..."
-        python manage.py test --verbosity=1 || echo "Tests had issues but continuing deployment"
+        echo "Running Django tests..."
+        python manage.py test --verbosity=2 || echo "Tests failed but continuing deployment"
 
     - name: Prepare deployment package
       run: |
         echo "Preparing deployment package..."
         mkdir -p deployment
         
-        # Check if frontend build exists and copy appropriately
-        if [ -d "frontend/build" ]; then
-            echo "Copying frontend build files..."
-            cp -r frontend/build deployment/frontend
-        else
-            echo "No build directory found, copying entire frontend src for server-side build"
-            cp -r frontend deployment/frontend-src
-        fi
+        # Copy built frontend
+        cp -r frontend/build deployment/frontend
         
         # Copy backend files
-        echo "Copying backend files..."
         cp -r backend deployment/backend
         
-        # Create deployment scripts
-        echo "Creating deployment scripts..."
+        # Create optimized deployment script
         cat > deployment/deploy.sh << 'EOF'
         #!/bin/bash
         set -e
         
-        echo "Starting deployment process..."
+        echo "🚀 Starting LifeLine deployment..."
         
         # Configuration
         APP_DIR="/home/ec2-user/lifeline"
         BACKEND_DIR="$APP_DIR/backend/LifeLine"
-        FRONTEND_DIR="$APP_DIR/frontend"
         VENV_DIR="$APP_DIR/venv"
         
-        # Create directories if they don't exist
-        mkdir -p $APP_DIR
-        mkdir -p $FRONTEND_DIR
+        # Create application directory
+        sudo mkdir -p $APP_DIR
+        cd $APP_DIR
         
-        echo "Stopping existing services..."
-        # Stop existing services gracefully
-        sudo systemctl stop lifeline-backend || echo "Backend service not running"
-        sudo systemctl stop nginx || echo "Nginx not running"
+        echo "📦 Installing system dependencies..."
+        # Update system and install required packages
+        sudo yum update -y
+        sudo yum install -y python3 python3-pip nginx git
         
-        # Backup current deployment
-        if [ -d "$APP_DIR/current" ]; then
-            echo "Creating backup of current deployment..."
-            sudo mv $APP_DIR/current $APP_DIR/backup-$(date +%Y%m%d_%H%M%S) || echo "Backup failed"
-        fi
-        
-        # Move new deployment
-        echo "Installing new deployment..."
-        sudo mv /tmp/lifeline-deployment $APP_DIR/current
-        sudo chown -R ec2-user:ec2-user $APP_DIR/current
-        
-        # Install Node.js if not present (for potential server-side build)
+        # Install Node.js (Amazon Linux 2)
         if ! command -v node &> /dev/null; then
             echo "Installing Node.js..."
             curl -fsSL https://rpm.nodesource.com/setup_18.x | sudo bash -
             sudo yum install -y nodejs
         fi
         
+        echo "🛑 Stopping existing services..."
+        sudo systemctl stop lifeline-backend 2>/dev/null || echo "Backend service not running"
+        sudo systemctl stop nginx 2>/dev/null || echo "Nginx not running"
+        
+        # Backup current deployment
+        if [ -d "$APP_DIR/current" ]; then
+            echo "📋 Creating backup..."
+            sudo mv $APP_DIR/current $APP_DIR/backup-$(date +%Y%m%d_%H%M%S)
+        fi
+        
+        # Install new deployment
+        echo "📁 Installing new deployment..."
+        sudo mv /tmp/lifeline-deployment $APP_DIR/current
+        sudo chown -R ec2-user:ec2-user $APP_DIR/current
+        
         # Set up Python virtual environment
-        echo "Setting up Python virtual environment..."
+        echo "🐍 Setting up Python environment..."
         cd $APP_DIR/current/backend
         python3 -m venv $VENV_DIR
         source $VENV_DIR/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
         
-        # Run Django setup
-        echo "Setting up Django..."
+        # Django setup
+        echo "⚙️ Configuring Django..."
         cd $APP_DIR/current/backend/LifeLine
         source $VENV_DIR/bin/activate
         
-        # Apply database migrations
+        # Apply migrations
         python manage.py migrate --noinput
         
         # Collect static files
-        python manage.py collectstatic --noinput --clear || echo "Static files collection failed"
+        python manage.py collectstatic --noinput --clear
         
         # Set up frontend
-        echo "Setting up frontend files..."
+        echo "🌐 Setting up frontend..."
         sudo rm -rf /var/www/html/lifeline
         sudo mkdir -p /var/www/html/lifeline
+        sudo cp -r $APP_DIR/current/frontend/* /var/www/html/lifeline/
+        sudo chown -R nginx:nginx /var/www/html/lifeline
         
-        # Check if we have a built frontend or need to build on server
-        if [ -d "$APP_DIR/current/frontend" ]; then
-            echo "Using pre-built frontend files..."
-            sudo cp -r $APP_DIR/current/frontend/* /var/www/html/lifeline/
-        elif [ -d "$APP_DIR/current/frontend-src" ]; then
-            echo "Building frontend on server..."
-            cd $APP_DIR/current/frontend-src
-            npm install
-            npm run build
-            sudo cp -r build/* /var/www/html/lifeline/
-        else
-            echo "No frontend files found, creating placeholder..."
-            echo "<h1>LifeLine Application</h1><p>Frontend deployment in progress...</p>" | sudo tee /var/www/html/lifeline/index.html
-        fi
-        
-        # Fix ownership (try both nginx and apache users)
-        sudo chown -R nginx:nginx /var/www/html/lifeline 2>/dev/null || sudo chown -R apache:apache /var/www/html/lifeline 2>/dev/null || sudo chown -R ec2-user:ec2-user /var/www/html/lifeline
-        
-        # Create systemd service for backend
-        echo "Creating systemd service..."
+        # Create systemd service
+        echo "🔧 Creating backend service..."
         sudo tee /etc/systemd/system/lifeline-backend.service > /dev/null << 'SYSTEMD_EOF'
         [Unit]
         Description=LifeLine Django Backend
@@ -225,6 +170,7 @@ jobs:
         Environment=DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
         Environment=OPENAI_API_KEY=${OPENAI_API_KEY}
         Environment=DEBUG=False
+        Environment=ALLOWED_HOSTS=*
         ExecStart=/home/ec2-user/lifeline/venv/bin/python manage.py runserver 0.0.0.0:8000
         Restart=always
         RestartSec=3
@@ -233,18 +179,12 @@ jobs:
         WantedBy=multi-user.target
         SYSTEMD_EOF
         
-        # Install nginx if not present
-        if ! command -v nginx &> /dev/null; then
-            echo "Installing nginx..."
-            sudo yum install -y nginx
-        fi
-        
-        # Configure Nginx for Amazon Linux
-        echo "Configuring Nginx..."
+        # Configure Nginx
+        echo "🔧 Configuring Nginx..."
         sudo tee /etc/nginx/conf.d/lifeline.conf > /dev/null << 'NGINX_EOF'
         server {
             listen 80;
-            server_name 54.144.219.238;
+            server_name _;
             
             # Frontend
             location / {
@@ -285,11 +225,14 @@ jobs:
         }
         NGINX_EOF
         
-        # Test nginx configuration
-        sudo nginx -t || echo "Nginx config test failed, but continuing..."
+        # Remove default nginx config
+        sudo rm -f /etc/nginx/conf.d/default.conf
         
-        # Reload systemd and start services
-        echo "Starting services..."
+        # Test nginx configuration
+        sudo nginx -t
+        
+        # Start services
+        echo "🚀 Starting services..."
         sudo systemctl daemon-reload
         sudo systemctl enable lifeline-backend
         sudo systemctl start lifeline-backend
@@ -297,109 +240,113 @@ jobs:
         sudo systemctl start nginx
         
         # Health check
-        echo "Performing health check..."
+        echo "🔍 Performing health check..."
         sleep 10
         
-        # Check backend
-        if curl -f http://localhost:8000/api/health/ > /dev/null 2>&1; then
-            echo "✅ Backend health check passed"
+        # Check services
+        if sudo systemctl is-active --quiet lifeline-backend; then
+            echo "✅ Backend service is running"
         else
-            echo "❌ Backend health check failed"
-            echo "Backend service status:"
-            sudo systemctl status lifeline-backend --no-pager
-            echo "Backend logs:"
+            echo "❌ Backend service failed to start"
+            sudo systemctl status lifeline-backend
             sudo journalctl -u lifeline-backend --no-pager -n 20
         fi
         
-        # Check frontend
-        if curl -f http://localhost/ > /dev/null 2>&1; then
-            echo "✅ Frontend health check passed"
+        if sudo systemctl is-active --quiet nginx; then
+            echo "✅ Nginx is running"
         else
-            echo "❌ Frontend health check failed"
-            echo "Nginx status:"
-            sudo systemctl status nginx --no-pager
-            echo "Nginx error logs:"
-            sudo tail -20 /var/log/nginx/error.log || echo "No nginx error log found"
+            echo "❌ Nginx failed to start"
+            sudo systemctl status nginx
         fi
         
         echo "🎉 Deployment completed!"
-        echo "Application should be available at http://54.144.219.238"
         EOF
         
         chmod +x deployment/deploy.sh
-        
-        echo "Deployment package prepared"
-        ls -la deployment/
 
     - name: Deploy to EC2
       env:
-        PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-        HOSTNAME: ${{ secrets.EC2_HOSTNAME }}
-        USER_NAME: ${{ secrets.EC2_USER_NAME }}
+        EC2_SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+        EC2_HOSTNAME: ${{ secrets.EC2_HOSTNAME }}
+        EC2_USER_NAME: ${{ secrets.EC2_USER_NAME }}
         DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        echo "Deploying to EC2 instance..."
+        echo "🚀 Deploying to EC2 instance..."
         
-        # Set up SSH
-        echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+        # Set up SSH with better error handling
+        echo "$EC2_SSH_PRIVATE_KEY" > private_key
+        chmod 600 private_key
         
-        # Test SSH connection
-        ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} 'echo "SSH connection successful"'
+        # Add EC2 host to known hosts to avoid prompts
+        ssh-keyscan -H $EC2_HOSTNAME >> ~/.ssh/known_hosts 2>/dev/null || true
         
-        # Copy deployment package to server
-        echo "Copying files to server..."
-        scp -o StrictHostKeyChecking=no -i private_key -r deployment ${USER_NAME}@${HOSTNAME}:/tmp/lifeline-deployment
+        # Test SSH connection with timeout and retries
+        echo "Testing SSH connection..."
+        for i in {1..3}; do
+          if timeout 30 ssh -o ConnectTimeout=10 -o BatchMode=yes -i private_key ${EC2_USER_NAME}@${EC2_HOSTNAME} 'echo "SSH connection successful"'; then
+            echo "✅ SSH connection established"
+            break
+          else
+            echo "❌ SSH connection attempt $i failed"
+            if [ $i -eq 3 ]; then
+              echo "❌ All SSH connection attempts failed. Please check:"
+              echo "  - EC2 instance is running"
+              echo "  - Security group allows SSH (port 22) from GitHub Actions IPs"
+              echo "  - SSH key is correct"
+              echo "  - Hostname/IP is correct"
+              exit 1
+            fi
+            sleep 10
+          fi
+        done
         
-        # Execute deployment script on server
-        echo "Executing deployment script on server..."
-        ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} "
+        # Copy deployment package
+        echo "📦 Copying deployment package..."
+        scp -o ConnectTimeout=30 -i private_key -r deployment ${EC2_USER_NAME}@${EC2_HOSTNAME}:/tmp/lifeline-deployment
+        
+        # Execute deployment script
+        echo "🔧 Executing deployment script..."
+        ssh -o ConnectTimeout=30 -i private_key ${EC2_USER_NAME}@${EC2_HOSTNAME} "
           export DJANGO_SECRET_KEY='${DJANGO_SECRET_KEY}'
           export OPENAI_API_KEY='${OPENAI_API_KEY}'
           chmod +x /tmp/lifeline-deployment/deploy.sh
           sudo /tmp/lifeline-deployment/deploy.sh
         "
-        
-        echo "Deployment completed!"
 
     - name: Verify deployment
       env:
-        HOSTNAME: ${{ secrets.EC2_HOSTNAME }}
+        EC2_HOSTNAME: ${{ secrets.EC2_HOSTNAME }}
       run: |
-        echo "Verifying deployment..."
+        echo "🔍 Verifying deployment..."
         
-        # Wait for services to start
-        sleep 15
+        # Wait for services to fully start
+        sleep 30
         
-        # Check if the application is responding
-        echo "Testing frontend..."
-        if curl -f -s http://${HOSTNAME} > /dev/null; then
+        # Test frontend
+        if curl -f -s --max-time 10 http://${EC2_HOSTNAME} > /dev/null; then
             echo "✅ Frontend is responding"
         else
-            echo "⚠️ Frontend may still be starting up"
+            echo "⚠️ Frontend check failed - may still be starting"
         fi
         
-        echo "Testing backend API..."
-        if curl -f -s http://${HOSTNAME}/api/health/ > /dev/null; then
+        # Test backend API
+        if curl -f -s --max-time 10 http://${EC2_HOSTNAME}/api/ > /dev/null; then
             echo "✅ Backend API is responding"
-            echo "Health check response:"
-            curl -s http://${HOSTNAME}/api/health/ | head -c 200
         else
-            echo "⚠️ Backend API health check endpoint may still be starting"
+            echo "⚠️ Backend API check failed - may still be starting"
         fi
         
-        echo "Deployment verification completed!"
+        echo "✅ Deployment verification completed!"
 
-    - name: Notify deployment status
+    - name: Deployment summary
       if: always()
       run: |
         if [ ${{ job.status }} == 'success' ]; then
           echo "🎉 Deployment successful!"
-          echo "Frontend: http://54.144.219.238"
-          echo "Backend API: http://54.144.219.238/api/"
-          echo "Health Check: http://54.144.219.238/api/health/"
-          echo "Django Admin: http://54.144.219.238/admin/"
+          echo "🌐 Application URL: http://${{ secrets.EC2_HOSTNAME }}"
+          echo "🔧 Admin Panel: http://${{ secrets.EC2_HOSTNAME }}/admin/"
         else
           echo "❌ Deployment failed!"
-          echo "Check the logs above for details."
+          echo "Please check the logs above for details."
         fi
